# cookiecutter-drf-simple

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .env-sample  .envrc  .pre-commit-config.yaml  Makefile  jsconfig.json  manage.py  pyproject.toml  requirements.in  requirements.txt
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: asgi.py  settings.py  urls.py  wsgi.py
