[project]
name = "{{cookiecutter.project_slug}}"
requires-python = ">={{cookiecutter.python_version}}.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
extend-exclude = """
(
   migrations/
   | __pycache__/
   | ^/static

)
"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{cookiecutter.package_name}}.settings"
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests"]
